--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to the Anuroobika’s homepage! 
+title: Welcome to Anuroobika’s homepage! 
 description: Feel free to bookmark this to keep an eye on my project updates 
